# vertex-ai-proxy

./: .gitignore  Dockerfile  HF-Dockerfile  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py
app/api/: __init__.py  auth.py  client_disconnect.py  dashboard.py  nonstream_handlers.py  routes.py  stream_handlers.py  vertex_nonstream_handlers.py  vertex_stream_handlers.py
app/config/: __init__.py  persistence.py  settings.py
app/models/: __init__.py  schemas.py
app/services/: OpenAI.py  gemini.py
app/utils/: __init__.py  api_key.py  auth.py  cache.py  error_handling.py  logging.py  maintenance.py  rate_limiting.py  request.py  response.py  stats.py  version.py
app/vertex/: config.py  vertex.py
