[project]
name = "vertex-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "fastapi",
    "google-auth",
    "google-cloud-aiplatform",
    "google-genai",
    "httpx",
    "jinja2",
    "pydantic",
    "python-dotenv",
    "requests",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
