[project]
name = "hajimi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "fastapi",
    "google-auth",
    "google-cloud-aiplatform",
    "google-genai",
    "httpx",
    "jinja2",
    "openai",
    "pydantic",
    "python-dotenv",
    "requests",
    "tzdata",
    "uvicorn",
    "xxhash",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
